fix: Ensure proper overflow of code blocks on mobile

--- a/packages/site/src/styles/index.scss
+++ b/packages/site/src/styles/index.scss
@@ -57,7 +57,7 @@ code {
 
   padding-top: $header-size;
   position: relative;
-  overflow: auto;
+  overflow: hidden;
 
   &:before {
     top: 0;
@@ -81,6 +81,7 @@ code {
     display: inline-block;
     padding: 0 !important;
     width: 100%;
+    overflow: auto;
 
     // the usual styling
     .line {
